## Process this file with automake to generate Makefile.in
examplesdir = $(prefix)/share/docsis/examples
      examples_DATA = docsis1.0_2class_non-rfc2669.cfg docsis1.0_2class_rfc2669.cfg docsis1.0_basic.cfg docsis1.0_basic_bpi.cfg docsis1.0_basic_upgrade.cfg docsis1.0_example.cfg docsis1.0_filters2_oidnum.cfg docsis1.0_filters2_oidtext.cfg docsis1.0_filters_NmAccess.cfg docsis1.0_filters_oidnum.cfg docsis1.0_filters_oidtext.cfg docsis1.1_classifiers.cfg docsis1.1_classifiers2.cfg docsis1.1_oss_v3coex.cfg docsis1.1_simple.cfg docsis1.1_stress_test.cfg docsis20.cfg docsis20_no_snmp.cfg docsis20_stresstest.cfg keyfile packetcable_mta.cfg readme.txt testkey.key

EXTRA_DIST = docsis1.0_2class_non-rfc2669.cfg docsis1.0_2class_rfc2669.cfg docsis1.0_basic.cfg docsis1.0_basic_bpi.cfg docsis1.0_basic_upgrade.cfg docsis1.0_example.cfg docsis1.0_filters2_oidnum.cfg docsis1.0_filters2_oidtext.cfg docsis1.0_filters_NmAccess.cfg docsis1.0_filters_oidnum.cfg docsis1.0_filters_oidtext.cfg docsis1.1_classifiers.cfg docsis1.1_classifiers2.cfg docsis1.1_oss_v3coex.cfg docsis1.1_simple.cfg docsis1.1_stress_test.cfg docsis20.cfg docsis20_no_snmp.cfg docsis20_stresstest.cfg keyfile packetcable_mta.cfg readme.txt testkey.key
