mibsdir = $(NETSNMP_MIBPATH)
mibs_DATA = CLAB-DEF-MIB.txt DOCS-BPI-MIB.mib DOCS-BPI2-MIB.mib DOCS-CABLE-DEVICE-MIB.mib DOCS-CABLE-DEVICE-TRAP-MIB.mib DOCS-IF-EXT-MIB.mib DOCS-IF-MIB.mib DOCS-QOS-MIB.mib DOCS-SUBMGT-MIB.mib IGMP-STD-MIB.mib PKTC-EVENT-MIB.mib PKTC-MTA-MIB.mib PKTC-SIG-MIB.mib
EXTRA_DIST = $(mibs_DATA)
