mibsdir = $(NETSNMP_MIBPATH)
mibs_DATA = \
	CLAB-DEF-MIB \
	DIFFSERV-DSCP-TC \
	DIFFSERV-MIB \
	DOCS-BPI2-MIB \
	DOCS-BPI-MIB \
	DOCS-CABLE-DEVICE-MIB \
	DOCS-CABLE-DEVICE-TRAP-MIB \
	DOCS-IF-EXT-MIB \
	DOCS-IF-MIB \
	DOCS-QOS-MIB \
	DOCS-SUBMGT-MIB \
	IGMP-STD-MIB \
	INTEGRATED-SERVICES-MIB \
	PKTC-EVENT-MIB \
	PKTC-IETF-SIG-MIB \
	PKTC-MTA-MIB \
	PKTC-SIG-MIB \
	RMON2-MIB \
	TOKEN-RING-RMON-MIB
EXTRA_DIST = $(mibs_DATA)
